--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.591.0",
+    "@aws-sdk/s3-request-presigner": "^3.591.0",
     "@hookform/resolvers": "^3.5.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -47,6 +49,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
+    "next-s3-upload": "^0.3.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -57,6 +60,7 @@
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
